# cng-workshop-materials

./: .gitignore  .pre-commit-config.yaml  Readme.md  _quarto.yml  index.qmd  justfile  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
_freeze/notebooks/02_raster/execute-results/: html.json
assets/: theme.scss
data/aoi/: salzburg_bbox.json
notebooks/: 01_vector.ipynb  01_vector.qmd  02_raster.ipynb  02_raster.qmd
scripts/: prepare.py
slides/: talk1.qmd
